# test-upload-repo

./: pyproject.toml
.github/workflows/: deploy-docs.yml
docs/: api-reference.rst  conf.py  examples.rst  getting-started.rst  index.rst
